--- a/views/base.pug
+++ b/views/base.pug
@@ -8,9 +8,8 @@ html
 
 
     body
-        //- HEADER
-
-        //- CONTENT
-        block content
-
-        //- FOOTER
+        .main--container
+            .outer--container__one 
+                .inner--container
+                    block content
+            .outer--container__two
