--- a/views/landingPage.pug
+++ b/views/landingPage.pug
@@ -5,4 +5,18 @@ block append head
     title #{title}
 
 block content
-    h1 This is the landing page
+    .left--container
+        h1 Name Placeholder
+        .img--container
+            img(src="/uploads/heart.png", alt="retro style heart")
+    .right--container
+        .right--container__content
+            h1 Productive Mind
+            p With only the features you need, Organic Mind is customized for individuals seeking a stress-free way to stay focused on their goals, projects, and tasks. 
+            a(href="/signup" id="get--started")  Get Started
+            .hr--container 
+                hr
+                span or
+                hr
+            span Already have an account? 
+                a(href='/signin' id='signin--link') Sign in
