--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,3 +1,57 @@
+@import url('https://fonts.cdnfonts.com/css/gelion');
+
 body {
-    
+    font-family: 'Gelion', sans-serif;
+    font-weight: 300;
+}
+
+.main--container {
+    /* gap: 0rem; */
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #1f2223;
+}
+
+.outer--container__one {
+    width: 1400px;
+    height: 900px;
+    border: 2px solid rgb(255, 255, 255, 0.1);
+    display: flex;
+    align-items: center;
+    border-bottom: none;
+    justify-content: center;
+    background-color: #222526;
+    border-top-left-radius: 3%;
+    border-top-right-radius: 3%;
+}
+
+.inner--container {
+    gap: 2rem;
+    width: 97%;
+    height: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1b1d1e;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+}
+
+.outer--container__two {
+    width: 1800px;
+    height: 40px;
+    border: 2px solid rgb(255, 255, 255, 0.1);
+    background-color: #222526;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+#forest-ext-shadow-host {
+    display: none;
 }
