Adding main to-do app page

--- a/public/stylesheets/signin.css
+++ b/public/stylesheets/signin.css
@@ -79,6 +79,24 @@
     background-color: #655002;
 }
 
+#temp--btn {
+    color: lightgray;
+    height: 40px;
+    border: none;
+    display: flex;
+    font-weight: 700;
+    align-items: center;
+    border-radius: 0.5rem;
+    justify-content: center;
+    text-decoration: none;
+    background-color: #7e6300;
+}
+
+#temp--btn:hover {
+    cursor: pointer;
+    background-color: #655002;
+}
+
 #signup--link {
     color: rgb(161, 161, 161);
     margin-left: 0.3rem;
