--- a/views/signin.pug
+++ b/views/signin.pug
@@ -15,7 +15,8 @@ block content
             form.signin--form 
                 input(type="email" name='email', placeholder='bendover@gmail.com', required) 
                 input(type="password" name='password', placeholder='password' ,required) 
-                button(type='submit', id='signin--btn') Sign in
+                //- button(type='submit', id='signin--btn') Sign in
+                a(href='/signedIn' id='temp--btn') Sign in
             .hr--container 
                 hr
                 span or
