Overview page design in the works

--- a/views/landingPage.pug
+++ b/views/landingPage.pug
@@ -8,7 +8,7 @@ block content
     .left--container
         h1 Name Placeholder
         .img--container
-            img(src="/uploads/heart.png", alt="retro style heart")
+            img(rel='icon' src="/uploads/heart.png", alt="retro style heart")
     .right--container
         .right--container__content
             h1 Productive Mind
