--- a/views/signin.pug
+++ b/views/signin.pug
@@ -16,7 +16,7 @@ block content
                 input(type="email" name='email', placeholder='bendover@gmail.com', required) 
                 input(type="password" name='password', placeholder='password' ,required) 
                 //- button(type='submit', id='signin--btn') Sign in
-                a(href='/signedIn' id='temp--btn') Sign in
+                a(href='/overview' id='temp--btn') Sign in
             .hr--container 
                 hr
                 span or
