--- a/views/overview.pug
+++ b/views/overview.pug
@@ -34,4 +34,8 @@ block content
             +container('Personal', 'square', 'square', false)
             +container('Work', 'square', 'square', false)
             +container('List 1', 'square', 'square', false)
+        .logout--container
+            img(src="/uploads/logout.png", alt="Logout Button")
+            p Sign out
+        
     .right--container
