connecting different models in the db

--- a/views/overview.pug
+++ b/views/overview.pug
@@ -37,5 +37,5 @@ block content
         .logout--container
             img(src="/uploads/logout.png", alt="Logout Button")
             p Sign out
-        
     .right--container
+        block list
