Display list directly from database, setting up routes for different lists etc.

--- a/views/base.pug
+++ b/views/base.pug
@@ -13,3 +13,6 @@ html
                 .inner--container
                     block content
             .outer--container__two
+
+
+        script(src='/js/bundle.js')
