--- a/views/list.pug
+++ b/views/list.pug
@@ -3,3 +3,6 @@ extends overview
 block append head 
     link(rel="stylesheet", href="/stylesheets/list.css")
     title #{title}
+
+block list
+    p Hi
