--- a/views/list.pug
+++ b/views/list.pug
@@ -1,8 +1,25 @@
 extends overview
 
+mixin task(name)
+    .task--container
+        input(type='checkbox' name='checkbox' class='checkbox')
+        p #{name}
+        img(src="/uploads/next.png", alt="Next")
+
 block append head 
     link(rel="stylesheet", href="/stylesheets/list.css")
     title #{title}
 
 block list
-    p Hi
+    .list--container
+        h1 Today 
+            - let taskCount = currentList.tasks.length ?? 0
+            span.count #{taskCount}
+        .tasks--container
+            .addNewTask--container
+                span +
+                p Add New Task
+            +task('Research content ideas')
+            +task('Create a database of guest authors')
+
+            
