--- a/views/list.pug
+++ b/views/list.pug
@@ -2,9 +2,9 @@ extends overview
 
 mixin task(name)
     .task--container
-        input(type='checkbox' name='checkbox' class='checkbox')
+        input(type="checkbox")
         p #{name}
-        img(src="/uploads/next.png", alt="Next")
+        img(src="/uploads/next.png", alt="Next" class='nextImage')
 
 block append head 
     link(rel="stylesheet", href="/stylesheets/list.css")
@@ -12,14 +12,15 @@ block append head
 
 block list
     .list--container
-        h1 Today 
+        - let listTitle = currentList.title ?? 'Temp Title'
+        h1 #{listTitle}
             - let taskCount = currentList.tasks.length ?? 0
             span.count #{taskCount}
         .tasks--container
             .addNewTask--container
                 span +
                 p Add New Task
-            +task('Research content ideas')
-            +task('Create a database of guest authors')
+            each task in currentList.tasks
+                +task(task.title)
 
             
