--- a/public/stylesheets/list.css
+++ b/public/stylesheets/list.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;700&display=swap');
+
 .list--container {
     color: rgb(200, 200, 200);
     gap: 1rem;
@@ -53,24 +55,26 @@
 }
 
 .task--container {
-    gap: 0.6rem;
+    gap: 0.3rem;
     display: flex;
     padding: 0.5rem;
     position: relative;
     align-items: center;
+    font-family: 'Lexend Deca', sans-serif;
     border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 }
 
-.checkbox {
-    accent-color: #1b1d1e;
-}
-
 .task--container p {
-    font-size: 1rem;
+    font-size: 0.9rem;
+    /* text-decoration: line-through; */
 }
 
 .task--container img {
     right: 1.5rem;
     width: 14px;
     position: absolute;
+}
+
+.nextImage {
+    cursor: pointer;
 }
