--- a/public/stylesheets/list.css
+++ b/public/stylesheets/list.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;700&display=swap');
 
 .list--container {
-    min-width: 65%;
+    /* min-width: 65%; */
+    width: 99%;
     color: rgb(200, 200, 200);
     gap: 1rem;
     display: flex;
@@ -74,6 +75,15 @@
     right: 1.5rem;
     width: 14px;
     position: absolute;
+}
+
+.task--container img:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+.task--container img:active {
+    transform: translateY(2px);
 }
 
 .nextImage {
