Display each task info dynamically straight from database

--- a/views/task.pug
+++ b/views/task.pug
@@ -8,8 +8,9 @@ block task
     .taskMenu--container
         h2 Task:
         span#closeTask x
-        input(type="text" placeholder='Renew driver\'s license ' id='taskTitle')
-        textarea(name="description", cols="30", rows="10" class='taskDescription' placeholder='Description')
+        input(type="text" placeholder=`${currentTask.title}` id='taskTitle')
+        - const textareaPlaceholder = currentTask.content || 'Description'
+        textarea(name="description", cols="30", rows="10" class='taskDescription' placeholder=textareaPlaceholder)
         h2 Subtasks: 
         button#deleteTask Delete Task 
         button#saveChanges Save Changes
