--- a/public/stylesheets/task.css
+++ b/public/stylesheets/task.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;700&display=swap');
 
-
-body, body * {
+.taskMenu--container, .taskMenu--container * {
     font-family: 'Lexend Deca', sans-serif;
 }
 
